src/css/main.css
:root {
  --logo-lila: #5f4596;
  --logo-lila-lighter: #7660a5;
  --logo-lila-dark: hsl(259, 37%, 20%);
  --logo-lila-light: hsl(274, 50%, 90%);
  --russian-green: #629677;
  --helitope-gray: #9a8c98;
  --logo-narancs: #f8aa21;
  --dark-purple: #604695;
  --light-gray: #f4f4f4;
  --light-purple: #f0eff4;
}

/* * {
  font-family: "Poppins", sans-serif;
} */

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

main {
  flex: 1;
}

main:has(.page-content) {
  background-color: var(--logo-lila);
  background: linear-gradient();
}

.lgs-active:hover {
  color: black;
}

.link-purple {
  text-decoration: none;
  color: var(--logo-lila);
}

.link-purple:hover {
  color: var(--logo-lila-dark);
}

.button-readmore {
  color: var(--logo-lila);
  text-decoration: none;
  background-color: white;
  padding: 0.8rem 1.5rem;
  border-radius: 1rem;
  font-weight: bold;
}

.button-readmore:hover {
  color: var(--logo-lila-dark);
}

.card-title {
  color: var(--dark-purple);
}

.card-researcher {
  background-color: var(--logo-lila);
  color: white;
}

.card-researcher:hover {
  background-color: var(--logo-narancs);
}

.card-researcher-content {
  width: fit-content;
  display: flex;
  align-items: center;
  height: 100%;
}

.card-researcher-content .card-title {
  color: white;
}

.card-researcher-content img {
  max-height: 8rem;
}

@media (hover: hover) and (pointer: fine) and (min-width: 992px) {
  .card-researcher {
    width: 90%;
    transition: all 0.2s ease-in-out;
    height: 10rem;
  }
  .card-researcher:hover {
    width: 100%;
  }
  .card-researcher-content {
    height: 100%;
    /* width: 40rem; */
  }
}
.kutato-link {
  text-decoration: none;
  color: white;
}

.kutato-link:hover {
  color: white;
}

.goback {
  color: var(--logo-lila);
  text-decoration: none;
  font-size: 1.25em;
  padding-bottom: 1rem;
}

.goback:hover {
  color: var(--logo-lila-dark);
}

.subtitle {
  color: gray;
}

.article-header {
  /* margin-top: 5rem; */
  padding-bottom: 1rem;
}

pre {
  background-color: #fafafa;
  padding: 1rem;
}

.kutato-md {
  display: none;
}

.kutato-profil {
  width: 7rem;
  float: right;
}

@media (min-width: 768px) {
  .kutato-profil {
    width: 12rem;
  }

  #kutato-small {
    display: none;
  }

  .kutato-md {
    display: block;
  }
}

footer {
  padding: 1rem;
}

.collapse.show {
  margin-left: 1rem;
}

.nav-item {
  margin: 0 0.7rem;
  font-size: 1.1em;
}

.nav-link.active {
  color: var(--logo-lila-dark) !important;
  font-weight: 500;
}

h1 {
  color: var(--logo-lila);
}

.subsection-title {
  color: var(--logo-lila);
}

.section-title {
  padding-top: 5rem;
  padding-bottom: 5rem;
  font-weight: bolder;
  text-align: center;
}

.article-title {
  color: var(--logo-lila);
  font-weight: bold;
}

.card-latest {
  background-color: var(--light-gray);
  /* max-width: 20rem; */
  padding: 1rem;
  display: flex;
  flex-direction: column;
  border-radius: 1rem;
  flex: 1;
  position: relative;
}

.card-latest:hover {
  background-color: var(--light-purple);
}

.card-latest-wrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 1rem;
}

.card-latest .card-text {
  flex: 1;
}

.all-news-arrow {
  flex: 1;
}

.card-collection-item:hover {
  /* border-left-color: var(--dark-purple); */
  background-color: var(--logo-narancs);
}

.card-collection-item:hover .button-readmore {
  color: var(--logo-narancs);
}

.card-collection-item {
  /* border-left: solid var(--light-gray) 0.7rem; */
  border-radius: 0.7rem;
  border: none;
  color: white !important;
  background-color: var(--logo-lila);
  padding: 0.7rem;
  /* width: 25rem; */
}

.grow {
  transition: all 0.1s ease-in-out;
}

.grow:hover {
  transform: scale(1.02);
}

.text-purple {
  color: var(--logo-lila);
}

@media screen and (max-width: 768px) {
  .collection-wrapper > :nth-child(odd) {
    margin-left: 3rem;
    background-color: var(--logo-narancs);
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }
  .collection-wrapper > :nth-child(odd) .button-readmore {
    color: var(--logo-narancs);
  }
  .collection-wrapper > :nth-child(even) {
    background-color: var(--logo-lila);
    margin-right: 3rem;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }
  .section-title {
    padding-bottom: 3rem;
  }

  #kutatok-title {
    text-align: center;
  }
}

@media screen and (min-width: 768px) {
  .card-collection-item {
    width: 25rem;
  }
}

@media screen and (max-width: 576px) {
  .card-latest-wrapper {
    flex-direction: column;
  }
}

.container-fix-sm {
  max-width: 1280px;
  margin: 0 auto;
}

#kutatok-title {
  color: var(--logo-lila);
  margin-bottom: 2rem;
}

.other-researchers-column {
  height: fit-content;
}

.cella-kep {
  height: 5rem;
}

.cella-kep_wrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 0.2rem;
}

.intern-card {
  border: 1px solid var(--logo-lila);
  border-radius: 0.3rem;
  background-color: var(--logo-lila-lighter);
  color: whitesmoke;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  margin: 0;
  max-width: 20rem;
}

.intern-grid {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

@media screen and (min-width: 768px) {
  .intern-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
  }
}

.about-us-logos img {
  max-width: 100%;
  height: 4rem;
  display: inline;
}

.about-us-logos {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 1rem;
}

img {
  max-width: 100%;
  /* height: auto; */
}

